# meowbar

./: .gitmodules  CMakeLists.txt  archive.sh  build.sh  file_list.cmake
private-headers/: common.hpp.in
src/: lemonbar.cpp  main.cpp  xcb_tutorial.cpp
test/: simple_bar.meow
